# ece721proj4

./: .gitignore  CMakeLists.txt  EVES-aggressive.csv  EVES-conservative.csv  EVES-d128-32-8.csv  EVES-d16-4-1.csv  EVES-d16-4-2.csv  EVES-d4-2-1.csv  EVES-d4-2-2.csv  EVES-d8-2-1.csv  EVES-d8-2-2.csv  EVES-flat.csv  EVES-load-heavy.csv  README.md  SUBMISSION_OVERVIEW.md  SVP-baseline.csv  run_eves_sweep.sh  run_validations.sh
docs/: CHRIS_WORK.md  DEVELOPMENT.md  EVES_TESTING_SUMMARY.md  LATEST_CHANGES.md  NEXT_STEPS.md  PARTNER_WORK.md  PROJECT_OVERVIEW.md  TODO.md
riscv-base/: CMakeLists.txt  encoding.h  generating_rules.cmake  htif.cc  interactive.cc  mmu.h  processor.cc  processor.h  trap.h
riscv-base/fesvr/: CMakeLists.txt  base64.cc  device.h  htif.cc  htif.h  strace.h  syscall.cc  syscall.h  syscall_bypass.cc  syscall_bypass.h  target_cwd.cc  target_cwd.h  version.txt
riscv-base/softfloat/: CMakeLists.txt
uarchsim/: .clang-format  BPinterface.h  CMakeLists.txt  CacheClass.cc  CacheClass.h  alu.cc  bq.cc  bq.h  btb.cc  btb.h  cache.h  checker.cc  checkpoint.cc  debug.cc  debug.h  decode.cc  dispatch.cc  execute.cc  fetch.cc  fetch_queue.cc  fetch_queue.h  fetchunit.cc  fetchunit.h  fetchunit_types.h  fu.h  gshare.cc  gshare.h  histogram.cc  histogram.h  ic.cc  ic.h  issue_queue.cc  issue_queue.h  lane.cc  lane.h  lsu.cc  lsu.h  main.cc  parameters.cc  parameters.h  (+34 more)
uarchsim/alu_ops/: alu_op_template.cc  alu_op_template.h  alu_ops.cc  alu_ops.h
uarchsim/mdp/: CMakeLists.txt
uarchsim/mdp/include/: mdp.h  mdp_wrapper.h
